View Issue Details

IDProjectCategoryView StatusLast Update
0023615Open CASCADEOCCT:Modeling Algorithmspublic2013-04-29 15:23
ReporteromyAssigned Toomy 
PrioritynormalSeverityminor 
Status closedResolutionfixed 
PlatformWindowsOSVC++ 2005 
Product Version6.5.4 
Target Version6.6.0Fixed in Version6.6.0 
Summary0023615: Wrong parameter value calculating in ShapeAnalysis_Curve
DescriptionShapeAnalysis_Curve::CurveNewton function sometimes returns wrong U parameter value (about 90.) That leads to crash in tests:
 
heal split_continuity_advanced W6
heal surface_to_revolution_advanced W6 Y5
Steps To Reproducein DRAW write:
test heal split_continuity_advanced W6 true
or
test heal surface_to_revolution_advanced W6 true
or
test heal surface_to_revolution_advanced Y5 true
TagsNo tags attached.
Test case numberheal split_continuity_advanced(015) W6; heal surface_to_revolution_advanced(017) W6 Y5

Relationships

child of 0023547 closedabv Tests failures in debug mode 

Activities

omy

2012-12-04 16:06

developer   ~0022541

Dear abv,
The fix has been integrated into branch CR23615.
Please, review.

abv

2012-12-05 12:05

manager   ~0022564

Reviewed; the branch has been rebased on the current master; some corrections (formatting, cleaning obsolete code, removing TODO in tests) are made. Please test

mkv

2012-12-06 15:14

tester   ~0022591

Dear BugMaster,
Branch CR23615 (and products from GIT master) was compiled on Linux and
Windows platforms and tested.

Regressions:
did 011 A6 C9
xsat 101 G6

Improvements:
Not detected

See results in
/QADisk/occttests/results/KAS/dev/CR23615-master-products_06122012/lin
See reference results in
/QADisk/occttests/results/KAS/dev/IR-2012-11-15-master-products_15112012/lin
See test cases in /QADisk/occttests/tests/ED

omy

2013-01-16 10:48

developer   ~0022977

Dear gka,
Regressions were fixed.
Please, review.

gka

2013-01-18 11:43

developer   ~0023027

Branch CR23615 was reviewed

mkv

2013-01-25 15:12

tester   ~0023154

Last edited: 2013-02-01 15:00

Dear BugMaster,
Branch CR23615 (and products from GIT master) was compiled on Linux and Windows platforms and tested.

Branch CR23615 was rebased on the current master.
Conflicts files was merget by MKV.

Number of compiler warnings:

occt component :
Linux: 3 (3 on master)
Windows: 85 (85 on master)

products component :
Linux: 9 (9 on master)
Windows: 54 (54 on master)

Regressions:
did 010 C6
xsat 101 G6
See results in
/QADisk/occttests/results/KAS/dev/CR23615-master-products_25012013/lin
See reference results in
/QADisk/occttests/results/KAS/dev/IR-2013-01-18-master-products_18012013/lin
See test cases in /QADisk/occttests/tests/ED

Improvements:
No improvements

Testing cases:
heal split_continuity_advanced(015) W6 - OK
heal surface_to_revolution_advanced(017) W6 Y5 - OK

Testing on Linux:
Total MEMORY difference: 222766492 / 223055260
Total CPU difference: 9145.760000000058 / 8309.2600000005

Testing on Windows:
Total MEMORY difference: 298740644 / 298044996
Total CPU difference: 11593.640625 / 11626.8125

There are not serious differences in images found by testdiff.

omy

2013-02-28 17:00

developer   ~0023531

Inserted TODO strings into test cases "did 010 C6" and "xsat 101 G6"

mkv

2013-02-28 18:33

tester   ~0023538

Dear BugMaster,
test cases "did 010 C6" and "xsat 101 G6" will be corrected afther pushing this fix to git repository.

Related Changesets

occt: master a9ae57b9

2013-03-01 10:20:00

omy

Details Diff
0023615: Wrong parameter value calculating in ShapeAnalysis_Curve

Now Extrema_LocateExtPC object is used instead of ShapeAnalysis_Curve::CurveNewton().
Removed CurveNewton() function.
Removed code protecting against null-length b-splines (should be obsolete now).
One TODO removed in test heal *advanced W6

Conflicts:

tests/heal/data/advanced/W6
Fixed regressions:
did 011 A6 C9
xsat 101 G6
Small syntax fix.
Affected Issues
0023615
mod - src/ShapeAnalysis/ShapeAnalysis_Curve.cxx Diff File
mod - tests/heal/data/advanced/W6 Diff File

Issue History

Date Modified Username Field Change
2012-12-04 15:49 omy New Issue
2012-12-04 15:49 omy Assigned To => omy
2012-12-04 15:49 omy Status new => assigned
2012-12-04 15:49 omy Relationship added child of 0023547
2012-12-04 15:53 omy Summary Wrong distance calculatied in ShapeAnalysis_Curve => Wrong parameter value calculatied in ShapeAnalysis_Curve
2012-12-04 15:53 omy Summary Wrong parameter value calculatied in ShapeAnalysis_Curve => Wrong parameter value calculating in ShapeAnalysis_Curve
2012-12-04 16:06 omy Note Added: 0022541
2012-12-04 16:06 omy Assigned To omy => abv
2012-12-04 16:06 omy Status assigned => resolved
2012-12-05 12:05 abv Note Added: 0022564
2012-12-05 12:05 abv Assigned To abv => bugmaster
2012-12-05 12:05 abv Status resolved => reviewed
2012-12-05 18:47 mkv Assigned To bugmaster => mkv
2012-12-06 15:14 mkv Note Added: 0022591
2012-12-06 15:14 mkv Assigned To mkv => omy
2012-12-06 15:14 mkv Status reviewed => assigned
2013-01-16 10:48 omy Note Added: 0022977
2013-01-16 10:48 omy Assigned To omy => gka
2013-01-16 10:48 omy Status assigned => resolved
2013-01-18 11:43 gka Note Added: 0023027
2013-01-18 11:43 gka Status resolved => reviewed
2013-01-25 15:12 mkv Note Added: 0023154
2013-01-25 15:13 mkv Test case number => heal split_continuity_advanced(015) W6; heal surface_to_revolution_advanced(017) W6 Y5
2013-01-25 15:13 mkv Assigned To gka => omy
2013-01-25 15:13 mkv Status reviewed => assigned
2013-02-01 15:00 mkv Note Edited: 0023154
2013-02-28 17:00 omy Note Added: 0023531
2013-02-28 17:58 mkv Assigned To omy => mkv
2013-02-28 18:33 mkv Note Added: 0023538
2013-02-28 18:33 mkv Assigned To mkv => bugmaster
2013-02-28 18:33 mkv Status assigned => resolved
2013-02-28 18:34 mkv Status resolved => reviewed
2013-02-28 18:34 mkv Status reviewed => tested
2013-03-04 17:32 omy Changeset attached => occt master a9ae57b9
2013-03-04 17:32 omy Assigned To bugmaster => omy
2013-03-04 17:32 omy Status tested => verified
2013-03-04 17:32 omy Resolution open => fixed
2013-04-23 13:35 aiv Status verified => closed
2013-04-29 15:23 aiv Fixed in Version => 6.6.0